# drf_date_time_field

./: .ruff.toml  README.md  pyproject.toml
core/: settings.py  urls.py
core/apps/event/: apps.py  urls.py
core/apps/event/factories/: __init__.py  event_factory.py
core/apps/event/migrations/: 0001_initial.py
core/apps/event/models/: __init__.py  event.py
core/apps/event/serializers/: __init__.py  event_serializer.py
core/apps/event/views/: __init__.py  event_view_set.py
