[tool.poetry]
package-mode = false
name = "drf-date-time-field"
version = "0.1.0"
description = ""
authors = ["thanhlt-1007 <le.tan.thanh@sun-asterisk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
ruff = "0.8.0"
django = "5.1.4"
djangorestframework = "3.15.2"
pyclean = "3.0.0"
factory-boy = "3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
